Bug 113187 - FILEOPEN: PPTX: SmartArt: Block cycle's connectors not imported
Summary: FILEOPEN: PPTX: SmartArt: Block cycle's connectors not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0 target:7.5.0 target:7.4.3
Keywords: filter:pptx
: 125839 147975 (view as bug list)
Depends on:
Blocks: OOXML-SmartArt PPTX
  Show dependency treegraph
 
Reported: 2017-10-17 14:25 UTC by Xisco Faulí
Modified: 2023-01-30 10:52 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Block cycle's arrows not imported (77.81 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-10-17 14:27 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.0 (133.06 KB, image/png)
2017-10-17 14:28 UTC, Xisco Faulí
Details
Not reproduced when using 'Text Cycle' (77.41 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-10-17 14:30 UTC, Xisco Faulí
Details
Shapes with arcto without any reference in path (16.39 KB, application/zip)
2022-10-30 18:14 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-10-17 14:25:00 UTC Comment hidden (obsolete)
Comment 1 Xisco Faulí 2017-10-17 14:26:17 UTC
Steps to reproduce:
1. Open attached document

Observed behaviour: Arrows connecting the blocks aren't imported.

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 616f21db9e50a77b0c02dfb123f871a742f46216
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and in

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 2 Xisco Faulí 2017-10-17 14:27:00 UTC
Created attachment 137052 [details]
Block cycle's arrows not imported
Comment 3 Xisco Faulí 2017-10-17 14:28:16 UTC
Created attachment 137053 [details]
comparison MSO 2010 and LibreOffice 6.0
Comment 4 Xisco Faulí 2017-10-17 14:30:42 UTC
Created attachment 137054 [details]
Not reproduced when using 'Text Cycle'
Comment 5 raal 2017-10-17 16:25:57 UTC
Confirmed. Version: 6.0.0.0.alpha0+
Build ID: 616f21db9e50a77b0c02dfb123f871a742f46216
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3;
Comment 6 QA Administrators 2018-10-22 02:50:16 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2019-09-29 16:54:20 UTC
Still confirmed

Version: 6.4.0.0.alpha0+ (x64)
Build ID: d744838991594eebe27acc4c7d9fb4579d654853
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-29_05:12:00
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 8 Oliver Grimm 2020-02-24 09:38:07 UTC
still a bug in LO 6.4.1
Comment 9 Commit Notification 2020-04-03 20:15:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9867f8b884ae8870a71b61e36f23eda91987e2a

crashtesting: mismatched start/end tag assert on reexport of tdf113187-1.pptx

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 QA Administrators 2022-04-04 03:31:10 UTC Comment hidden (obsolete)
Comment 11 Xisco Faulí 2022-04-04 08:35:48 UTC
Still reproducible in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 9f0e19721bb598c75835cfa94f4158085f81288e
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 12 Regina Henschel 2022-07-19 23:37:42 UTC
This is not a normal SmartArt as available in the UI of PowerPoint. But the arrows are defined by a custGeom. In a normal SmartArt shapes only shapes with prstGeom are used.

The geometry has a viewBox="0 0 0 0" but the subView is missing. The conversion from EMU to Hmm is missing.

The rectangle of the arrows is on the correct place, but the path of the arrows is rendered at totally wrong place.
Comment 13 Regina Henschel 2022-10-30 18:14:54 UTC
Created attachment 183345 [details]
Shapes with arcto without any reference in path

The SmartArt types "Block Cycle" and "Nondirectional Cycle" use arcTo commands. Each arcTo command introduces two additional equations for to convert start and swing angle from the unit 1/60000 degree in OOXML to degree in LibreOffice.

Therefore maGuideList has items although all other points in the path have no references but constant values in if(!maGuideList.empty()) in https://opengrok.libreoffice.org/xref/core/oox/source/drawingml/customshapeproperties.cxx?r=c70ee4a6#201

That is the reason, why viewBox contains 0 for width and height and therefor the arc is not displayed.

The error does not only exists with these SmartArt types, but with normal custom shapes with such geometry too, see attachment.
Comment 14 Commit Notification 2022-10-31 11:21:14 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf972fb9856957f4444199eb97464b83d8dc2698

tdf#113187 exclude angle conversion from count of maGuideList

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Regina Henschel 2022-10-31 11:36:36 UTC
*** Bug 125839 has been marked as a duplicate of this bug. ***
Comment 16 Commit Notification 2022-11-02 10:58:05 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f0a86f50516c1f887b054fe0d042bf9be8c83975

tdf#113187 exclude angle conversion from count of maGuideList

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2023-01-30 10:52:46 UTC
*** Bug 147975 has been marked as a duplicate of this bug. ***